--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <label for="#" class="result">Your Current Age is: </label>
             <input type="text" name="result" id="resultShow" readonly>
 
+            <div class="backBtn" id="backBtn">
+                <button class="back"><a href="https://svishal111.github.io/JSHomeworkCompilation/">Go Back</a></button>
+            </div>
+            
         </div>
     </main>
 
